esp business single page-1

--- a/themes/growth-sketch/layouts/_default/single.html
+++ b/themes/growth-sketch/layouts/_default/single.html
@@ -206,15 +206,19 @@
       <div class="col-md-5 solution-box">
         <h4>RTT - Ready to Train  / Instant Energy Packs</h4> 
         <h5>Readily available training modules for business settings...</h5><hr>
-        <p>There is no one medicine for all illness. Some require capsules and some require shots. We are here to understand your symptoms, identify the root cause and treat the root cause and not the symptom. <br> <br>
+        <p>There is no one medicine for all illness. Some require capsules and some require shots. We are here to understand your symptoms, identify the root cause and treat the root cause and not the symptom.
+           <!-- <br> <br>
           நோய்நாடி நோய்முதல் நாடி அதுதணிக்கும்
           வாய்நாடி வாய்ப்பச் செயல். (௯௱௪௰௮ - 948) <br>
-          <strong>Meaning</strong>: Diagnose the illness, trace its cause, Seek the proper remedy and apply it with skill.</p>
+          <strong>Meaning</strong>: Diagnose the illness, trace its cause, Seek the proper remedy and apply it with skill. -->
+        </p>
       </div>
       <div class="col-md-5 solution-box">
-        <h3 class="text-primary mb-4">CTDD - Customized training development & delivery</h3>
-        <h5>Tailor-made modules</h5> <hr>
-        <p>Tailor-made modules designed & developed for your unique & specific needs... <br>CTDD There are times the learning intervention required for business may be unique & distinct. In such cases our competent training needs assessment team will initiate a study to ascertain your apt needs. For that the study we will interact with all of your stakeholders and come with a road map to design & deliver with start to end clarity. </p>
+        <h4>CTDD - Customized training development & delivery</h4>
+        <!-- <h5>Tailor-made modules</h5>  -->
+         <h5>Tailor-made modules designed & developed for your unique & specific needs...</h5>
+        <hr>
+        <p>CTDD There are times the learning intervention required for business may be unique & distinct. In such cases our competent training needs assessment team will initiate a study to ascertain your apt needs. For that the study we will interact with all of your stakeholders and come with a road map to design & deliver with start to end clarity. </p>
       </div>
     </div>
     
@@ -222,7 +226,7 @@
 </section>
 
 <!-- RTT Section -->
-<section class="rtt-section p-5 text-center">
+<section class="rtt-section p-5 text-center d-none">
   <div class="container">
     <h3>Here are our top 10 ranked training modules for business setting</h3>
     <p>Our journey in the training space has been intensely reflective...</p>
@@ -239,18 +243,18 @@
       <li>Internal Coaching</li>
     </ul>
     <hr>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-md-8 mx-auto">
         <p>RTT Our journey in the training space has been intensely reflective over a period of time.
           As a culminated effort of which, We have mastered various time tested & result oriented training modules for business setting. It guarantees a turn around result in your executive development, management & leadership development which are a game changer for your business. Many such proprietary curated modules have been created by us. </p> <hr>
           <p>Learning needs like the light from a prism. It is different from person to person, from level to level and even for the same person differently at different points of time. We are here not only to train your teams but also your executives who would just need the gentle nudge.</p>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
 
 <!-- CTDD Section -->
-<section class="ctdd-section p-5 text-center text-md-start">
+<section class="ctdd-section p-5 text-center text-md-start d-none">
   <div class="container">
     <h3>CTDD - Tailor-made Solutions</h3>
     <p>There are times the learning intervention required for business may be unique & distinct. In such cases our competent training needs assessment team will initiate a study to ascertain your apt needs. For that the study we will interact with all of your stakeholders and come with a road map to design & deliver with start to end clarity. </p>
