--- a/themes/growth-sketch/assets/scss/pages/_industries.scss
+++ b/themes/growth-sketch/assets/scss/pages/_industries.scss
@@ -85,13 +85,17 @@ $blob: #ffc10586;
 
 
 
-.hero-business {
+.hero-clientele {
     background: $primary-clr url('/images/manufacturing-business.jpg') no-repeat center/cover;
     background-blend-mode: overlay;
     color: white;
-
+    
     .hero-title {
         font-size: 2.5rem;
+    }
+    &.non-profit{
+        background-image: url(/images/non-profit-bg.jpg);
+
     }
 }
 
