esp business single page-education

--- a/themes/growth-sketch/assets/scss/pages/_industries.scss
+++ b/themes/growth-sketch/assets/scss/pages/_industries.scss
@@ -97,6 +97,9 @@ $blob: #ffc10586;
         background-image: url(/images/non-profit-bg.jpg);
 
     }
+    &.education{
+        background-image: url(/images/education-img-1.jpeg);
+    }
 }
 
 .intro-section {
