--- a/themes/growth-sketch/layouts/_default/single.html
+++ b/themes/growth-sketch/layouts/_default/single.html
@@ -1,137 +1,9 @@
 {{ define "main" }}
-<section class="py-5 d-none">
-  <div class="container d-none">
-    <div class="row justify-content-between align-items-center border-3 border-top border-bottom py-2">
-      <div class="col-auto">
-        <div class="d-flex align-items-center gap-2">
-          <!-- <img class="img-rouded img-profile" src="/images/logo.png" alt="profile picture Muralidharan"> -->
-          <p class="mb-0">Mr. Muralidharan</p>
-        </div>
-      </div>
-      <div class="col-auto">
-        {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
-        {{ $dateHuman := .Date | time.Format ":date_long" }}
-        <small class="text-sm-end mb-0">
-          Published on
-          <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
-        </small>
-      </div>
-    </div>
-    <div class="row mt-4 mt-md-5">
-      <!-- <h1>{{ .Title }}</h1> -->
-      <div class="col-md-8 mx-auto">
-        {{ .Content }}
-        {{ partial "terms.html" (dict "taxonomy" "categories" "page" .) }}
-      </div>
-    </div>
-  </div>
-</section>
+
 {{ if eq .Params.layout "about" }}
-
-<section class="esp-evolution pb-5 d-none">
-  <div class="container">
-    <div class="d-none">
-
-      <h1 class="mb-4">The Evolution of ESPeople</h1>
-      <p>Every great organisation starts with a dream—a vision for achieving excellence. But to turn that vision into
-        reality, you need the right people who have the energy and ability to make things happen. That's where ESPeople
-        come in. We partner with organisations to develop and empower their teams, helping them turn their original
-        dream
-        into reality and inspire new heights of success.</p>
-      <h2 class="mt-5 mb-3">ESP Vision & Mission</h2>
-      <!-- <h3>Vision:</h3>
-      <p>To energize and synergize people’s abilities through impactful and everlasting learning experiences.</p>
-      <h3>Mission:</h3>
-      <ul>
-        <li>Deliver training that goes beyond conventional settings, using real-world scenarios, hands-on activities and IT enabled learning.
-        </li>
-        <li>Enhance people’s energy and team synergy to realize organizational goals.</li>
-        <li>Foster an understanding of the organization's goals among its team members.</li>
-      </ul> -->
-
-      <h5 class="mb-4"><strong>Energize & Synergize People capabilities through effective learning
-          interventions</strong></h5>
-      <!-- change font of above and below line -->
-      <h5 class="font-weight-bold"><strong>Be a best training service provider in enabling people</strong></h5>
-      </p>
-      <ul class="mt-4">
-        <li>To maximize their energy &</li>
-        <li>To effectively employ it in synergy with their team</li>
-        <li>Towards attaining organizational goals achievement</li>
-      </ul>
-    </div>
-    <h2 class="mt-5 mb-3">Who We Are</h2>
-    <p>At <strong>ESP (Energize, Synergize, People)</strong>, we are dedicated to helping organizations unlock their
-      potential by energizing individuals and synergizing teams. Our approach focuses on empowering people to grow,
-      collaborate, and drive success within their organizations.</p>
-
-    <h2 class="mt-5 mb-3">What We Do</h2>
-    <p>We offer specialized training and development programs aimed at improving leadership, management, and team
-      dynamics in business organizations. Our goal is to help individuals realize their strengths and bring teams
-      together to work toward a unified vision.</p>
-    <div class="d-none">
-
-      <p>Our proven <strong>ESP Learning Model</strong> follows a step-by-step approach to ensure growth through
-        practical
-        learning:</p>
-      <ul>
-        <li><strong>Awareness:</strong> We create awareness of the challenges faced by teams and individuals.</li>
-        <li><strong>Understanding:</strong> We deepen comprehension by offering clarity around key concepts.</li>
-        <li><strong>Learning:</strong> We teach actionable insights that can be applied in real-world scenarios.</li>
-        <li><strong>Realisation:</strong> We help individuals and teams internalize these insights.</li>
-        <li><strong>Habitualisation:</strong> Our programs ensure the adoption of new skills into everyday practices.
-        </li>
-      </ul>
-    </div>
-    <h2 class="mt-5 mb-3">How We Do It</h2>
-
-    <p>By combining in-person and virtual training solutions, we provide businesses with flexible options to meet their
-      unique needs.</p>
-  </div>
-</section>
-
-<!-- Section 2- About us -->
-<section class="about-us py-5 d-none">
-  <div class="container text-center">
-    <h2 class="section-title mb-4">About us</h2>
-    <div class="row justify-content-center">
-      <!-- Who We Are -->
-      <div class="col-md-4">
-        <div class="info-box">
-          <h4>Who We Are</h4>
-          <p>At ESPeople, we are a team of heart-centric Trainingsmiths (trainers), bringing the desired catalytic
-            change in line with your organizational aspirations through people enablement.</p>
-        </div>
-      </div>
-      <!-- What We Do -->
-      <div class="col-md-4">
-        <div class="info-box">
-          <h4>What We Do</h4>
-          <p>We deliver transformative, contemporary People Developmental Learning for desired results. These programs
-            enhance executive and managerial productivity with leadership optimization for your organization. This
-            facilitates desired organizational ranking within your industry through your people.</p>
-        </div>
-      </div>
-      <!-- How We Do It -->
-      <div class="col-md-4">
-        <div class="info-box">
-          <h4>How We Do It</h4>
-          <p>We simply ENERGIZE your people's capabilities and then SYNERGIZE them with their core team for high
-            performance.<br>Thus, we are ESPeople Trainingsmiths.</p>
-        </div>
-      </div>
-    </div>
-    <!-- Know more Button -->
-    <div class="mt-4">
-      <a href="about-us.html" class="btn btn-primary">Know more</a>
-    </div>
-  </div>
-</section>
-
 <section class="learning-section px-3 py-5">
   <div class="container">
     <h1 class="text-center mb-4">About ESPeople</h1>
-
     <div class="row align-items-center">
       <div class="col-md-6 text-content mt-5 mt-md-0">
         <h2>Who We Are</h2>
@@ -174,30 +46,24 @@
     </div>
   </div>
 </section>
-
-
 {{ end }}
 
 {{ if and (eq .Params.layout "clientele") (eq .Params.category "business") }}
-
 <!-- Hero Section -->
 <section class="hero-clientele text-center text-light p-5 min-vh-50">
   <h1 class="display-1">ESPeople Business</h1>
   <h2 class="display-4 my-3">Learning Solutions</h2>
   <h3>Learning is a lifelong journey. <br> We are here to sail along with your organization and your workforce...</h3>
 </section>
-
 <!-- Introduction Section -->
 <section class="intro-section p-5 text-center text-md-start position-relative py-5 d-flex align-items-center">
   <div class="blob position-absolute"></div>
   <div class="container">
-
     <h1 class="display-5 mb-0">Our passion towards learning makes us the single candle awaiting to spread the light and
       make the space bright.
     </h1>
   </div>
 </section>
-
 <!-- Learning Solutions Section -->
 <section class="learning-solutions p-5">
   <div class="container">
@@ -221,10 +87,8 @@
           to end clarity. </p>
       </div>
     </div>
-
   </div>
 </section>
-
 <!-- RTT Section -->
 <section class="rtt-section p-5 text-center d-none">
   <div class="container">
@@ -252,7 +116,6 @@
     </div> -->
   </div>
 </section>
-
 <!-- CTDD Section -->
 <section class="ctdd-section p-5 text-center text-md-start d-none">
   <div class="container">
@@ -263,13 +126,10 @@
       clarity. </p>
   </div>
 </section>
-
-
 <script>
   // scripts.js
   document.addEventListener("DOMContentLoaded", () => {
     const sections = document.querySelectorAll("section");
-
     const observer = new IntersectionObserver(
       (entries) => {
         entries.forEach((entry) => {
@@ -282,12 +142,10 @@
         threshold: 0.1,
       }
     );
-
     sections.forEach((section) => {
       observer.observe(section);
     });
   });
-
 </script>
 {{ else }}
 {{ if eq .Params.category "nonprofit" }}
@@ -298,12 +156,10 @@
   <h3>Non Profit Organizations that contribute more to the society as those businesses that contribute to the nation's
     economy are one of our key focus segment....</h3>
 </section>
-
 <!-- Introduction Section -->
 <section class="intro-section p-5 text-center text-md-start position-relative py-5 d-flex align-items-center">
   <div class="blob position-absolute"></div>
   <div class="container">
-
     <h1 class="display-5 mb-0">We are here to add value to those who add value to our society.</h1>
   </div>
 </section>
@@ -335,28 +191,82 @@
     <!-- <hr> -->
   </div>
 </section>
-
-{{ .Content }}
-
+<!-- {{ .Content }} -->
 {{ else if eq .Params.category "education" }}
-<!-- HTML for other category 2 -->
-<p>Content for other category 2</p>
+<section class="hero-clientele non-profit text-center text-light p-5 min-vh-50">
+  <h1 class="display-1">ESPeople Education</h1>
+  <h2 class="display-4 my-3">Learning Solutions</h2>
+  <h3>Students are the backbone for a family, society and the nation. As a culture, we place high regard for the Educators to whom the future of the nation are entrusted with....</h3>
+</section>
 
+<!-- Introduction Section -->
+<section class="intro-section p-5 text-center text-md-start position-relative py-5 d-flex align-items-center">
+  <div class="blob position-absolute"></div>
+  <div class="container">
+    <h1 class="display-5 mb-0">Yet, to stay competitive, every saw need to be sharpened... <br>
+      We genuinely believe that the strength of the seed sown determines the strength of the tree; to stand through the tests of time and character. So this segment is very close to our heart.</h1>
+  </div>
+</section>
+<section class="ctdd-section p-5 text-center text-md-start">
+  <div class="container">
+    <!-- <h3>CTDD - Tailor-made Solutions</h3> -->
+    <h4>Our team of experts with Behavioral, Developmental and applied psychology background are here to help educators and students chisel their dreams as future leaders. </h4>
+  </div>
+</section>
+
+<section class="learning-solutions p-5">
+  <div class="container">
+    <h3 class="text-primary mb-4">We have customised training options based on your need.</h3>
+    <div class="row justify-content-between">
+      <div class="col-md-5 solution-box">
+        <h4>Few of our courses for educators include</h4>
+        <hr>
+        <ol>
+          <li>Handling adolescents </li>
+          <li>Conflict management and resolution </li>
+          <li>Complexities Gen alpha's go through - Understanding and Support to navigate </li>
+          <li>Reflective thinking </li>
+          <li>Encouraging Dialogue and Debate </li>
+          <li>Strategies for motivating students </li>
+          <li>Modern teaching methodologies</li>
+          <li>AI and Technology for Teachers </li>
+          <li>Understanding diverse student needs </li>
+          <li>Classroom management </li>
+          <li>Effective lesson planning </li>
+          <li>Communication skills </li>
+          <li>Strategies for addressing diverse learning needs </li>
+          <li>Creating an inclusive learning environment</li>
+          <li>DEI</li>
+        </ol>
+      </div>
+      <div class="col-md-5 solution-box">
+        <h4>Few courses for students include</h4>
+        <hr>
+        <ol>
+          <li>Problem solving </li>
+          <li>Career preparedness </li>
+          <li>Emotional intelligence for adolescents </li>
+          <li>Critical thinking </li>
+          <li>Habits building </li>
+          <li>Collaboration & Team building skills</li>
+          <li>Campus to Corporate </li>
+          <li>Exploring hobbies</li>
+          <li>Teamship Behaviour</li>
+        </ol>
+      </div>
+    </div>
+
+  </div>
+</section>
 {{ else if eq .Params.category "government" }}
-<!-- HTML for other category 3 -->
 <p>Content for other category 3</p>
-
 {{ else }}
+
 <!-- HTML for default case -->
 <p>Default content</p>
 {{ end }}
 
-
-
-
-
 {{ end }}
-
 
 <!-- layout "approach" -->
 {{ if eq .Params.layout "approach" }}
@@ -370,10 +280,8 @@
   </div>
 </section>
 {{ end }}
-
 <!-- layout 'contact' -->
 {{ if eq .Params.layout "contact" }}
-
 <!-- contact form -->
 <section class="contact-section py-5">
   <div class="container">
@@ -383,17 +291,13 @@
       Synergize
       People) method helps businesses overcome these challenges. Reach out below and we'll partner with you to unlock
       growth and success.</p>
-
     <div class="row justify-content-between">
       <!-- Contact Information Column -->
       <div class="col-md-5 mb-4">
         <h4>Contact Information</h4>
         <p><strong>Address:</strong><br> 123 Main Street, Chennai, Tamil Nadu, India</p>
-
         <p><strong>Phone:</strong><br> <a href="tel:+919840167444">+91 9840167444</a></p>
-
         <p><strong>Email:</strong><br> <a href="mailto:contact@espeople.in">contact@espeople.in</a></p>
-
         <!-- Map Embed -->
         <div class="map-container d-none" style="border-radius: 8px; overflow: hidden">
           <iframe
@@ -403,7 +307,6 @@
           </iframe>
         </div>
       </div>
-
       <!-- Form Column -->
       <div class="col-md-6">
         <form>
@@ -412,34 +315,29 @@
             <input type="text" class="form-control form-control-border" id="floatingName" placeholder="Your Name">
             <label for="floatingName">Your Name</label>
           </div>
-
           <!-- Mobile Number Input -->
           <div class="form-floating mb-3">
             <input type="tel" class="form-control form-control-border" id="floatingMobile"
               placeholder="Your Mobile Number">
             <label for="floatingMobile">Your Mobile Number</label>
           </div>
-
           <!-- Email Input -->
           <div class="form-floating mb-3">
             <input type="email" class="form-control form-control-border" id="floatingEmail"
               placeholder="name@example.com">
             <label for="floatingEmail">Email Address</label>
           </div>
-
           <!-- Subject Input -->
           <div class="form-floating mb-3">
             <input type="text" class="form-control form-control-border" id="floatingSubject" placeholder="Subject">
             <label for="floatingSubject">Subject</label>
           </div>
-
           <!-- Message Input -->
           <div class="form-floating mb-4">
             <textarea class="form-control form-control-border" id="floatingMessage" placeholder="Your Message"
               style="height: 150px;"></textarea>
             <label for="floatingMessage">Your Message</label>
           </div>
-
           <!-- Submit Button -->
           <div class="text-center">
             <button type="submit" class="btn btn-secondary">Send Message</button>
@@ -447,14 +345,11 @@
         </form>
       </div>
     </div>
-
   </div>
 </section>
-
 {{ end }}
 <!-- layout otherLD -->
 {{ if eq .Params.layout "other" }}
-
 <section class="otherLD  py-8 bg-primary--light px-4 px-md-0">
   <div class="container">
     <div class="row">
