--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -576,6 +576,8 @@ img {
     font-size: 2.5rem; }
   .hero-clientele.non-profit {
     background-image: url(/images/non-profit-bg.jpg); }
+  .hero-clientele.education {
+    background-image: url(/images/education-img-1.jpeg); }
 
 .intro-section {
   background-color: #bdecfa;
