esp business single page-govt

--- a/themes/growth-sketch/layouts/_default/single.html
+++ b/themes/growth-sketch/layouts/_default/single.html
@@ -193,7 +193,7 @@
 </section>
 <!-- {{ .Content }} -->
 {{ else if eq .Params.category "education" }}
-<section class="hero-clientele non-profit text-center text-light p-5 min-vh-50">
+<section class="hero-clientele education text-center text-light p-5 min-vh-50">
   <h1 class="display-1">ESPeople Education</h1>
   <h2 class="display-4 my-3">Learning Solutions</h2>
   <h3>Students are the backbone for a family, society and the nation. As a culture, we place high regard for the Educators to whom the future of the nation are entrusted with....</h3>
@@ -259,7 +259,40 @@
   </div>
 </section>
 {{ else if eq .Params.category "government" }}
-<p>Content for other category 3</p>
+<!-- <p>Content for other category 3</p> -->
+<section class="hero-clientele government text-center text-light p-5 min-vh-50">
+  <h1 class="display-1">ESPeople Government</h1>
+  <h2 class="display-4 my-3">Learning Solutions</h2>
+  <h3>Our government-focused training programs at ESPeople are designed to empower leaders with essential skills in decision-making, crisis management, servant leadership, innovation, and more, enabling them to lead with agility, responsibility, and resilience....</h3>
+</section>
+
+<section class="learning-solutions p-5">
+  <div class="container">
+    <h3 class="text-primary mb-4 text-center">We have customised training options based on your need.</h3>
+    <div class="row justify-content-between">
+      <div class="col-md-6 mx-auto solution-box">
+        <h4>Training programs for ESPeople Government include but not limited to:</h4>
+        <hr>
+        <ol>
+<li>Decision making </li>
+<li>Governance </li>
+<li>Crisis management </li>
+<li>Delegation skills</li>
+<li>Problem solving </li>
+<li>Inspirational leadership </li>
+<li>Anchoring and exploring CSR</li>
+<li>Servant leadership </li>
+<li>AI for leaders</li>
+ <li>Agility and innovation</li>
+ <li>Negotiation </li>
+ <li>Team management </li>
+ <li>Handling adverse scenarios</li>
+        </ol>
+      </div>
+    </div>
+
+  </div>
+</section>
 {{ else }}
 
 <!-- HTML for default case -->
