--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -578,6 +578,8 @@ img {
     background-image: url(/images/non-profit-bg.jpg); }
   .hero-clientele.education {
     background-image: url(/images/education-img-1.jpeg); }
+  .hero-clientele.government {
+    background-image: url(/images/government-org.jpeg); }
 
 .intro-section {
   background-color: #bdecfa;
