--- a/themes/growth-sketch/assets/scss/pages/_industries.scss
+++ b/themes/growth-sketch/assets/scss/pages/_industries.scss
@@ -100,6 +100,9 @@ $blob: #ffc10586;
     &.education{
         background-image: url(/images/education-img-1.jpeg);
     }
+    &.government{
+        background-image: url(/images/government-org.jpeg);
+    }
 }
 
 .intro-section {
