--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -43,7 +43,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/hero-img-2.jpg" class="d-block w-100 carousel-image neumorphism " alt="non-profit-2 Image">
+              <img src="/images/non-profit-bg.jpg" class="d-block w-100 carousel-image neumorphism " alt="non-profit-2 Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Non-Profit</h5>
               </div>
@@ -454,7 +454,7 @@
 </script>
 
 <!-- esp core belief and learning model -->
-<section class="why-choose-us py-8">
+<section class="why-choose-us py-8 d-none">
   <div class="container text-center">
     <!-- Title -->
     <h2 class="section-title mb-5">Why ESPeople</h2>
@@ -517,6 +517,38 @@
     <!-- CTA -->
     <div class="mt-5 d-none">
       <a href="espeople.in/why-choose-us" class="btn btn-secondary">Read More</a>
+    </div>
+  </div>
+</section>
+
+<section class="why-espeople">
+  <div class="content">
+    <div class="column learning-model">
+      <img src="/images/learning-model.png" alt="learning model">
+      <h3>The ESP Learning Model</h3>
+      <ul>
+        <li><strong>Awareness:</strong> Learning begins with creating a sense of awareness.</li>
+        <li><strong>Understanding:</strong> Gain clarity of the situation with a resource person.</li>
+        <li><strong>Learning:</strong> Facilitate real-world application of the understanding.</li>
+        <li><strong>Realization:</strong> Perceive the situation in its entirety as realization unfolds.</li>
+        <li><strong>Habitualization:</strong> Internalize and habitualize learned skills or behaviors.</li>
+      </ul>
+    </div>
+    <div class="column core-belief">
+      <img src="/images/core-belief.png" alt="our-core-belief img">
+      <h3>Our Core Belief</h3>
+      <p>
+        Love people for who they are instead of judging them for what they are not.
+        <em>Essence is, accept people as they are!</em>
+      </p>
+    </div>
+    <div class="column delivery">
+      <img src="/images/what-we-deliver-1.png" alt="what we deliver">
+      <h3>What We Deliver</h3>
+      <p>
+        We energize your team's capabilities and synergize them with core strengths for high performance.
+        <strong>"Thus, we are ESPeople Trainingsmiths"</strong>
+      </p>
     </div>
   </div>
 </section>
