--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -503,6 +503,65 @@ img {
         color: #777;
         font-size: 1rem; }
 
+.why-espeople {
+  padding: 2rem;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+  background: #f9f9f9; }
+
+.why-espeople .content {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem; }
+
+.why-espeople .column {
+  background: #fff;
+  padding: 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center; }
+
+.why-espeople .column img {
+  max-width: 100%;
+  border-radius: 8px;
+  margin-bottom: 1rem; }
+
+.why-espeople h3 {
+  margin-bottom: 1rem;
+  color: #444;
+  font-size: 1.5rem; }
+
+.why-espeople ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: left; }
+
+.why-espeople ul li {
+  margin-bottom: 0.5rem;
+  line-height: 1.5; }
+
+.why-espeople p {
+  margin-top: 1rem;
+  line-height: 1.6; }
+
+.why-espeople em {
+  font-style: italic;
+  color: #777; }
+
+.why-espeople strong {
+  font-weight: bold;
+  color: #555; }
+
+/* Desktop Layout */
+@media (min-width: 768px) {
+  .why-espeople .content {
+    flex-direction: row;
+    justify-content: space-between; }
+  .why-espeople .column {
+    flex: 1;
+    margin: 0 1rem; } }
+
 .esp-evolution {
   background-color: #f8fbfc;
   padding: 5rem 0; }
@@ -613,7 +672,8 @@ img {
   background: linear-gradient(135deg, #004080, #bdecfa);
   color: white; }
   .ctdd-section h3 {
-    color: #ffc105; }
+    color: #ffc105;
+    font-family: "Daniel", sans-serif; }
 
 .fade-in {
   opacity: 0;
