--- a/themes/growth-sketch/layouts/_default/single.html
+++ b/themes/growth-sketch/layouts/_default/single.html
@@ -71,20 +71,23 @@
     <!-- <p>Our learning solutions for business settings are unique, offered in two types:</p> -->
     <div class="row justify-content-between">
       <div class="col-md-5 solution-box">
-        <h4>RTT - Ready to Train / Instant Energy Packs</h4>
+        <!-- <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <path fill="#FF0066" d="M37.7,-63.9C46.6,-60.2,49.9,-45.5,49.8,-33C49.7,-20.5,46.2,-10.3,51.5,3.1C56.8,16.4,71,32.8,67,38.2C63.1,43.7,41,38.2,26.8,41.7C12.6,45.1,6.3,57.6,-2.4,61.8C-11.1,66,-22.2,61.9,-30.5,54.9C-38.7,48,-44,38.2,-49.8,28.6C-55.6,19,-61.8,9.5,-64.5,-1.6C-67.3,-12.6,-66.5,-25.3,-61.5,-36.4C-56.6,-47.4,-47.5,-57,-36.5,-59.5C-25.6,-62,-12.8,-57.5,0.8,-58.9C14.4,-60.4,28.8,-67.6,37.7,-63.9Z" transform="translate(100 100)" />
+        </svg> -->
+        <h4>RTT - Ready to Train (Timely to deliver at ease)</h4>
         <h5>Readily available training modules for business settings...</h5>
         <hr>
-        <p>There is no one medicine for all illness. Some require capsules and some require shots. We are here to
-          understand your symptoms, identify the root cause and treat the root cause and not the symptom.</p>
+        <p>This RTT learning solutions are readily available, time tested, matured, refined, meets the urgent & critical
+          learning needs of the client business.</p>
       </div>
       <div class="col-md-5 solution-box">
         <h4>CTDD - Customized training development & delivery</h4>
         <h5>Tailor-made modules designed & developed for your unique & specific needs...</h5>
         <hr>
-        <p>CTDD There are times the learning intervention required for business may be unique & distinct. In such cases
-          our competent training needs assessment team will initiate a study to ascertain your apt needs. For that the
-          study we will interact with all of your stakeholders and come with a road map to design & deliver with start
-          to end clarity. </p>
+        <p>CTDD - There are times the learning interventions required for your business may be unique & distinct. In
+          such cases our competent training needs assessment team will initiate a study to ascertain your apt needs. For
+          that study we will interact with your appropriate stack holders and come with a road map to design, develop &
+          deliver learning solutions with start to end clarity.</p>
       </div>
     </div>
   </div>
@@ -166,13 +169,42 @@
 <section class="ctdd-section p-5 text-center text-md-start">
   <div class="container">
     <!-- <h3>CTDD - Tailor-made Solutions</h3> -->
-    <h4>With Professional Social Work background, our team of experts are aware of the challenges and complexities that are faced by the Non Profit Organizations as well as those dynamic requirements that arise both from the society as well as from the Human Capital. </h4>
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <h4>With Professional Social Work background, our team of experts are aware of the challenges and complexities
+          that
+          are faced by the Non Profit Organizations as well as those dynamic requirements that arise both from the
+          society
+          as well as from the Human Capital. </h4>
+      </div>
+    </div>
   </div>
 </section>
 <!-- key offerings -->
 <section class="rtt-section p-5 text-center">
   <div class="container">
-    <h3>Few of our service offerings are:</h3>
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <h4>RTT - Ready to Train (Timely to deliver at ease)</h4>
+        <h5>Readily available training modules for non-profit settings</h5>
+        <hr>
+        <p>This RTT learning solutions are readily available, time tested, evolved based on various practicing experts
+          matured experience in non-profit field. Professionals from diverse fields of psychology, sociology & social
+          workers sculpted these contemporary learning solutions for non-profit settings.</p>
+      </div>
+      <div class="col-md-6">
+        <h4>CTDD - Customized training development & delivery</h4>
+        <h5>Tailor-made modules designed & developed for your unique & specific needs</h5>
+        <hr>
+        <p>CTDD - There are times learning solutions to non-profits need to made for the hour, situations and apt needs.
+          Thus we study your unique needs, design, develop, implement & fully deliver customized learning solutions to
+          your non-profit settings. <br>In such cases our competent training needs assessment team will initiate a study
+          to ascertain your apt needs. For that study we will interact with your appropriate stack holders and come with
+          a road map to design, develop & deliver learning solutions with start to end clarity.</p>
+      </div>
+
+    </div>
+    <!-- <h3>Few of our service offerings are:</h3>
     <ol class="top-training-modules">
       <li>Managing volunteers </li>
       <li>Handling conflicts </li>
@@ -187,7 +219,7 @@
       <li>Gaining community acceptance </li>
       <li>Strategic goals setting for growth </li>
       <li>Analytics and metrics</li>
-    </ol>
+    </ol> -->
     <!-- <hr> -->
   </div>
 </section>
@@ -196,30 +228,37 @@
 <section class="hero-clientele education text-center text-light p-5 min-vh-50">
   <h1 class="display-1">ESPeople Education</h1>
   <h2 class="display-4 my-3">Learning Solutions</h2>
-  <h3>Students are the backbone for a family, society and the nation. As a culture, we place high regard for the Educators to whom the future of the nation are entrusted with....</h3>
+  <!-- <h3>Students are the backbone for a family, society and the nation. As a culture, we place high regard for the
+    Educators to whom the future of the nation are entrusted with....</h3> -->
+  <h3>A future of a country can be tracked on the present students aspirations & dream of that nation.</h3>
 </section>
 
 <!-- Introduction Section -->
 <section class="intro-section p-5 text-center text-md-start position-relative py-5 d-flex align-items-center">
   <div class="blob position-absolute"></div>
   <div class="container">
-    <h1 class="display-5 mb-0">Yet, to stay competitive, every saw need to be sharpened... <br>
-      We genuinely believe that the strength of the seed sown determines the strength of the tree; to stand through the tests of time and character. So this segment is very close to our heart.</h1>
+    <!-- <h1 class="display-5 mb-0">Yet, to stay competitive, every saw need to be sharpened... <br>
+      We genuinely believe that the strength of the seed sown determines the strength of the tree; to stand through the
+      tests of time and character. So this segment is very close to our heart.</h1> -->
+    <h1 class="display-5 mb-0">Education builds future youth of the country to compete with rest of the nation's.
+      Students + Teachers + School/College/Universities play a critical component of a nations growth, development &
+      prosperity.</h1>
   </div>
 </section>
-<section class="ctdd-section p-5 text-center text-md-start">
+<section class="ctdd-section p-5 text-center text-md-start d-none">
   <div class="container">
     <!-- <h3>CTDD - Tailor-made Solutions</h3> -->
-    <h4>Our team of experts with Behavioral, Developmental and applied psychology background are here to help educators and students chisel their dreams as future leaders. </h4>
+    <h4>Our team of experts with Behavioral, Developmental and applied psychology background are here to help educators
+      and students chisel their dreams as future leaders. </h4>
   </div>
 </section>
 
 <section class="learning-solutions p-5">
   <div class="container">
-    <h3 class="text-primary mb-4">We have customised training options based on your need.</h3>
+    <h3 class="text-primary mb-4">Our learning solutions for education setting are of 2 types:</h3>
     <div class="row justify-content-between">
       <div class="col-md-5 solution-box">
-        <h4>Few of our courses for educators include</h4>
+        <!-- <h4>Few of our courses for educators include</h4>
         <hr>
         <ol>
           <li>Handling adolescents </li>
@@ -237,10 +276,37 @@
           <li>Strategies for addressing diverse learning needs </li>
           <li>Creating an inclusive learning environment</li>
           <li>DEI</li>
-        </ol>
+        </ol> -->
+        <h4>RTT - Re@ady to Train <br>(Timely to deliver at ease) </h4>
+
+
+        <h5>Readily available training modules for educational settings</h5>
+        <hr>
+
+        <p>This RTT learning solutions for educational settings are crafted by collecting valuable inputs from
+          professionals who are engaged in youth growth domains viz., academia, economists, developmental psychologist &
+          sociologist etc., Such solutions are readily available, time tested, matured, refined, meets the growth dreams
+          perspectives of educational settings.</p>
       </div>
       <div class="col-md-5 solution-box">
-        <h4>Few courses for students include</h4>
+        <h4>CTDD - Customized training development & delivery</h4>
+
+        <h5>Besides (RTT) readily available learning modules an institution in the education setting may face some
+          unique issues which may require tailor-made modules designed & developed for their unique & specific needs
+        </h5>
+        <hr>
+
+        <p>
+          CTDD - In certain situations educational institutions require training solutions for their unique issues faced
+          in the process of growth & development which are student centric, academic related practices or even
+          Governmental specific directions.Thus we study your unique needs, design, develop, implement & fully deliver
+          customized learning solutions to your educational settings.
+
+          In such cases our competent training needs assessment team will initiate a study to ascertain your apt needs.
+          For that study we will interact with your appropriate stack holders and come with a road map to design,
+          develop & deliver learning solutions with start to end clarity.
+        </p>
+        <!-- <h4>Few courses for students include</h4>
         <hr>
         <ol>
           <li>Problem solving </li>
@@ -252,7 +318,7 @@
           <li>Campus to Corporate </li>
           <li>Exploring hobbies</li>
           <li>Teamship Behaviour</li>
-        </ol>
+        </ol> -->
       </div>
     </div>
 
@@ -263,7 +329,9 @@
 <section class="hero-clientele government text-center text-light p-5 min-vh-50">
   <h1 class="display-1">ESPeople Government</h1>
   <h2 class="display-4 my-3">Learning Solutions</h2>
-  <h3>Our government-focused training programs at ESPeople are designed to empower leaders with essential skills in decision-making, crisis management, servant leadership, innovation, and more, enabling them to lead with agility, responsibility, and resilience....</h3>
+  <h3>Our government-focused training programs at ESPeople are designed to empower leaders with essential skills in
+    decision-making, crisis management, servant leadership, innovation, and more, enabling them to lead with agility,
+    responsibility, and resilience....</h3>
 </section>
 
 <section class="learning-solutions p-5">
@@ -274,19 +342,19 @@
         <h4>Training programs for ESPeople Government include but not limited to:</h4>
         <hr>
         <ol>
-<li>Decision making </li>
-<li>Governance </li>
-<li>Crisis management </li>
-<li>Delegation skills</li>
-<li>Problem solving </li>
-<li>Inspirational leadership </li>
-<li>Anchoring and exploring CSR</li>
-<li>Servant leadership </li>
-<li>AI for leaders</li>
- <li>Agility and innovation</li>
- <li>Negotiation </li>
- <li>Team management </li>
- <li>Handling adverse scenarios</li>
+          <li>Decision making </li>
+          <li>Governance </li>
+          <li>Crisis management </li>
+          <li>Delegation skills</li>
+          <li>Problem solving </li>
+          <li>Inspirational leadership </li>
+          <li>Anchoring and exploring CSR</li>
+          <li>Servant leadership </li>
+          <li>AI for leaders</li>
+          <li>Agility and innovation</li>
+          <li>Negotiation </li>
+          <li>Team management </li>
+          <li>Handling adverse scenarios</li>
         </ol>
       </div>
     </div>
@@ -298,7 +366,9 @@
 <section class="hero-clientele focussed text-center text-light p-5 min-vh-50">
   <h1 class="display-1">ESPeople Focussed Individuals</h1>
   <h2 class="display-4 my-3">Learning Solutions</h2>
-  <h3>We offer tailored programs for specific groups, including slow learners, consultants, homemakers, career transitioners, and more. Our training is designed to meet unique needs and provide targeted learning solutions for each group....</h3>
+  <h3>We offer tailored programs for specific groups, including slow learners, consultants, homemakers, career
+    transitioners, and more. Our training is designed to meet unique needs and provide targeted learning solutions for
+    each group....</h3>
 </section>
 <section class="learning-solutions p-5">
   <div class="container">
